# Optimization_Visulization

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ContourPlot.h  linkage-app.cpp
src/gui/: CMakeLists.txt  application.cpp
src/kinematics/: CMakeLists.txt  ForwardKinematics.h  InverseKinematics.h  Linkage.h
src/optimization/: AutoDiff.h  CMakeLists.txt  GradientDescentMinimizer.h  Minimizer.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  RandomMinimizer.h
src/test-a1/: CMakeLists.txt  TestResult.h  test.cpp
